--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -18,7 +18,4 @@ test:
 
 # set these environment variables on your prod server
 production:
-  <<: *defaults
-  database: treasure_hunt
-  username: <%= ENV['MONGO_USERNAME'] %>
-  password: <%= ENV['MONGO_PASSWORD'] %>
+  uri: <%= ENV['MONGOLAB_URI'] %>
